--- a/Lab3_NhatNguyen_WebApp/appsettings.json
+++ b/Lab3_NhatNguyen_WebApp/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "AmazonCredential": {
-    "AccessKey": "AKIARWPA456PJ5OJJZAF",
-    "SecretKey": "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"
+    "AccessKey": "ACCESS_KEY",
+    "SecretKey": "SECRET_KEY"
   },
   "ConnectionStrings": {
     "Connection2RDS": "Database=MovieWebApp;Data Source=mssqlserveruser.cxfhmnqbeabx.ca-central-1.rds.amazonaws.com,1433;Trust Server Certificate=True;"
